# Trident

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_perlmutter.sh  dataset.yaml  kokkos_install.sh  run_interactive_test.sh  test_compression.sbatch  test_correctness.sh
amg_matrices/: Makefile  README.md  generate_restrictors.sh  multigrid_solver_matrix_generator.cpp  sparsity_patters_vizualizer.py
comparison/: CMakeLists.txt  exp.py  matrices.txt
comparison/include/mcl/: args.hpp
comparison/trilinos/: trilinos_mcl.cpp  trilinos_spgemm.cpp
include/: KokkosWrap.hpp  KokkosWrapTriple.hpp  KokkosWrap_tmpfix.hpp  MPIType.h  common.h  cusparse_helpers.cuh  getVramData.h  hns_spgemm.cuh  hns_spgemm.h  hns_spgemm_1d.cuh  hns_spgemm_get.cuh  incremental_updates.hpp  kokkos_helpers.cuh  mempool.cuh  message_queue.cuh  message_stack.hpp  spacomm.cuh  sparse_summa.cuh  task_queue.cuh  test_utils.cuh  tile_holder.cuh  tile_queue.cuh  tile_stack.cuh  tile_window.cuh  utils.cuh
include/mcl/: args.hpp
scripts/: build_perlmutter.sh  diagnostics.py  hns_spgemm_build.sh  kokkos_install.sh  make_scripts.py  make_scripts_restrict.py  parse_results.py  plot_commvol.py  plot_mcl.py  plot_p2p_results.py  plot_v2.py  plots.py  run_p2p_experiments.sh  trilinos_install.sh  trilinos_mcl_build.sh  trilinos_spgemm_build.sh  variables.sh
small_matrices/: n1024.bmtx  n16_full.bmtx
src/: KokkosWrap.cpp  driver.cu  hns_spgemm.cu  hns_spgemm_1d.cu  hns_spgemm_get.cu  mcl.cu  run_spgemm.cu  run_spgemm_incremental.cu  sparse_summa.cu
test/: test_compression.cu  test_kokkos.cu  test_p2p_mthread.cpp  test_p2pallgatherv.cu  test_queue.cu  test_stack.cu
yaml_files/: config.yaml  configs.yaml  jobs_hns.yaml  jobs_hns_perlmutter.yaml  jobs_trilinos_perlmutter.yaml  matrices.yaml  mcl_matrices.yaml  preliminary_matrices.yaml
