
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CUDA_ARCHITECTURES "80")
set(CMAKE_CXX_STANDARD 20)
project(comparisons LANGUAGES CXX CUDA)

find_package(CUDAToolkit REQUIRED COMPONENTS cusparse)
find_package(Trilinos REQUIRED COMPONENTS Teuchos Tpetra)
find_package(MPI REQUIRED COMPONENTS CXX)

set(CCUTILS_ENABLE_MPI ON CACHE BOOL "Enable MPI support in ccutils")
set(CCUTILS_ENABLE_CUDA ON CACHE BOOL "Enable CUDA support in ccutils")

add_subdirectory(ccutils)

message("\nFound Trilinos!  Here are the details: ")
message("   Trilinos_DIR = ${Trilinos_DIR}")
message("   Trilinos_VERSION = ${Trilinos_VERSION}")
message("   Trilinos_PACKAGE_LIST = ${Trilinos_PACKAGE_LIST}")
message("   Trilinos_LIBRARIES = ${Trilinos_LIBRARIES}")
message("   Trilinos_INCLUDE_DIRS = ${Trilinos_INCLUDE_DIRS}")
message("   Trilinos_TPL_LIST = ${Trilinos_TPL_LIST}")
message("   Trilinos_TPL_LIBRARIES = ${Trilinos_TPL_LIBRARIES}")
message("   Trilinos_BUILD_SHARED_LIBS = ${Trilinos_BUILD_SHARED_LIBS}")
message("End of Trilinos details\n")
set(Tpetra_DIR ${Trilinos_DIR}/../Tpetra/)
set(Teuchos_DIR ${Trilinos_DIR}/../Teuchos/)
message(${Tpetra_DIR})
find_package(Tpetra REQUIRED Tpetra )
find_package(Teuchos REQUIRED Teuchos )
add_executable(trilinos_spgemm trilinos/trilinos_spgemm.cpp)
target_link_libraries(trilinos_spgemm PRIVATE Tpetra::all_libs Teuchos::all_libs MPI::MPI_CXX ccutils::ccutils ccutils::ccutils_cuda ccutils::ccutils_mpi)
target_compile_options(trilinos_spgemm PRIVATE -O3)
